# Synapse

./: pyproject.toml
src/synapse/: main.py
src/synapse/social_network/: base.py  builder.py  github.py  instagram.py  pinterest.py  tiktok.py  trello.py  twitter.py
