[project]
name = "synapse"
version = "0.1.0"
description = ""
authors = [
    {name = "DocteurMoriarty",email = "MorissetLarreSacha.Pro@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]

[tool.poetry]
packages = [{include = "synapse", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
